--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:ui":"vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
     "@rocketseat/eslint-config": "1.3.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.1",
+    "@vitest/coverage-v8": "0.33.0",
+    "@vitest/ui": "0.33.0",
     "eslint": "8.44.0",
     "prisma": "4.16.2",
     "tsup": "7.1.0",
