--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/server.js",
+    "test:create-prisma-environment": "sudo npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "sudo npm link vitest-environment-prisma",
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
+    "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui"
   },
@@ -19,10 +24,13 @@
     "@rocketseat/eslint-config": "1.3.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.1",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-v8": "0.33.0",
     "@vitest/ui": "0.33.0",
     "eslint": "8.44.0",
+    "npm-run-all": "4.1.5",
     "prisma": "4.16.2",
+    "supertest": "6.3.3",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
@@ -30,6 +38,7 @@
     "vitest": "0.33.0"
   },
   "dependencies": {
+    "@fastify/jwt": "7.2.0",
     "@prisma/client": "4.16.2",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.9",
