ci: fix envoriment name on service

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -28,7 +28,7 @@ jobs:
     - run: npm ci
 
     - run: npm run test:e2e
-      env:
+      envoriment:
         JWT_SECRET: testing
         DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
 
